Changed color palette to green, grey, and black. Added green icons. Built out all sections. Still need to add footer, fix top navigation, and adjust spacing between categories (colors, font, etc).

--- a/Project_3/css/style.css
+++ b/Project_3/css/style.css
@@ -4,7 +4,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    background-color: #233132;
+    background-color: #222327;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -33,23 +33,52 @@ header h1 {
     color: white;
     font-weight: 400;
     letter-spacing: 2px;
-    text-align: center;
+    text-align: left;
     position: relative;
     margin: auto 0;
+    text-transform: uppercase;
 }
 
 .header-border {
-    border-left: 2px solid #4a4a56;
-    padding: 40px 10px;
+    border-left: 2px solid #B7C809;
+    padding: 30px 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    max-width: 450px;
 }
 
 .header-icon {
-    position: absolute;
+    position: fixed;
     top: 20px;
     right: 20px;
+}
+
+.top-nav {
+    float: left;
+    box-sizing: border-box;
+    left: 0px;
+    overflow-y: auto;
+    padding:30px 100px 30px 20px;
+    position: fixed;
+    text-align: right;
+    font-family: Inter;
+    font-size: 14px;
+    top: 0px;
+    width: 100%;
+    z-index: 999;
+}
+
+.top-nav-bar {
+    position: fixed;
+    background-color: #222327;
+    width: 100%;
+}
+
+
+.top-nav li {
+    display: inline;
+    padding: 0 20px;
 }
 
 /* Typography */
@@ -73,9 +102,10 @@ h2 {
 h3 {
     font-family: sans-serif;
     font-size: 25px;
-    color: #331832;
+    color: #B7C809;
     font-weight: 400;
     letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
 
@@ -100,24 +130,40 @@ p {
 /* Colors */
 
 
-/*#222327 light purple*/
-/*#332b36 light green*/
+/*#222327 dark grey*/
+/*#332b36 park purple*/
 /*#233132 dark green*/
-/*#345f58 dark purple*/
-/*#4a4a56 grey*/
+/*#345f58 light green*/
+/*#4a4a56 light purple*/
 
 /* Page elements */
 
 .section {
-    padding: 50px 50px;
+    padding: 50px 50px 60px 50px;
 }
 
 .section-nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #4a4a56;
+    background-color: black;
 }
+
+.section-categories {
+    background-color: #595b66;
+}
+
+.icon {
+    padding-right: 20px;
+    height: 60px;
+}
+
+.icon-category {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 
 /*.menu-img {*/
 /*    height: 25px;*/
@@ -143,9 +189,28 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    color: #222327;
+.arrow-link a {
+    color: black;
     text-decoration: none;
+}
 
+li a {
+    color: #B7C809;
+    text-decoration: none;
+}
+
+li a:hover {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #B7C809;
+    text-decoration: none;
+}
+
+a:hover.arrow-link {
+    color: #B7C809;
+    text-decoration: none;
 }
 
